[package]
name = "reps-sia"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/jovillarrealm/reps-sia"
authors = ["Jorge A. Villarreal Márquez <javillarrm@eafit.edu.co>"]
#manufacturer = "muh will to live"
description = "Esto coge los reportes Agenda del SIA y los pasa a un xlsx"
license = "Apache-2.0"


[package.metadata.wix]
upgrade-guid = "1D5E6CCB-7223-42C8-9419-B5F47AA39C9E"
path-guid = "CBA1CBC8-526E-4071-9EB6-35ED75283AC3"
license = true
eula = true

[dependencies]
rust_xlsxwriter = "0.84.0"
clap = { version = "4.5.31", features = ["derive"] }
pdf-extract = "0.8.2"
regex = "1.11.1"
rfd = "0.15.2"
eframe = "0.31.1"
image = "0.25.5"
chrono = "0.4.40"
once_cell = "1.20.3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

